--- a/wishes/pages/stock/stockDemand/index.wxss
+++ b/wishes/pages/stock/stockDemand/index.wxss
@@ -123,5 +123,71 @@
     background: #fff;
     position: fixed;
     bottom:0
-
+}
+.drop-down{
+    width:520rpx;
+    line-height: 56rpx;
+    background: #fff;
+    position: relative;
+}
+.drop-down:after{
+    content: "";
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid #000;
+    position: absolute;
+    width: 0;
+    top:21rpx;
+    right:15rpx;
+}
+.w510{
+    width:510rpx!important;
+}
+.date-sel{
+    width: 100%;
+    position: absolute;
+    bottom:0;
+    background: #fff;
+}
+.date-sel view{
+    text-align: center;
+}
+.businessDay-btn{
+    display: flex;
+    justify-content:space-between;
+    padding: 0 50rpx;
+    border-bottom: 1rpx solid #E5E5E5;
+}
+.businessDay-btn view{
+    padding: 20rpx 20rpx;
+}
+.businessDay-btn-cancel{
+    color: #888;
+}
+.businessDay-btn-ensure{
+    color: #1AAD19;
+}
+.user-sort-sel{
+    width: 100%;
+    position: absolute;
+    bottom:0;
+    background: #fff;
+}
+.user-sort-sel view{
+    text-align: center;
+}
+.birthday-btn{
+    display: flex;
+    justify-content:space-between;
+    padding: 0 50rpx;
+    border-bottom: 1rpx solid #E5E5E5;
+}
+.birthday-btn view{
+    padding: 20rpx 20rpx;
+}
+.birthday-btn-cancel{
+    color: #888;
+}
+.birthday-btn-ensure{
+    color: #1AAD19;
 }
