--- a/wishes/pages/business/businessHome/index.wxml
+++ b/wishes/pages/business/businessHome/index.wxml
@@ -3,11 +3,11 @@
         <view class="business-header-deal">
             <view>
                 <text>买入合计:</text>
-                <text>{{businessTotal.saleMoneyTotal}}元</text>
+                <text>{{businessTotal.exchangeMoneyTotal}}元</text>
             </view>
             <view>
                 <text>卖出合计:</text>
-                <text>{{businessTotal.exchangeMoneyTotal}}元</text>
+                <text>{{businessTotal.saleMoneyTotal}}元</text>
             </view>
         </view>
         <view class="business-header-total">
@@ -20,7 +20,7 @@
             <view class="business-main-info">
                 <view class="business-info-material">
                     <view class="business-id">
-                        <text>{{item.noteBusinessId}}</text>
+                        <text>{{index+1}}</text>
                     </view>
                     <view class="business-bill-material">
                         <view class="business-bill-material-item">
@@ -34,7 +34,7 @@
                         <view class="business-bill-material-time">
                             <text class="clue">客户名称:</text>
                             <text class="info">{{item.nbMarketer}}</text>
-                            <text class="clue">交易日期:</text>
+                            <text class="clue">交易时间:</text>
                             <text class="info">{{item.nbDate}}</text>
                         </view>
                     </view>
