--- a/wishes/pages/stock/stockHome/index.wxml
+++ b/wishes/pages/stock/stockHome/index.wxml
@@ -15,29 +15,6 @@
                     <text class="info">{{stockTotal.electroYearMoneyTotal}}</text>
                 </view>
             </view>
-            <block wx:if="{{personalData.uType<3 && personalData.plusType==2}}">
-                <view class="stock-detail-finance">
-                    <view>
-                        <text class="clue">半年财票合计</text>
-                        <text class="info">{{stockTotal.financeHalfYearMoneyTotal}}</text>
-                    </view>
-                    <view>
-                        <text class="clue">一年财票合计</text>
-                        <text class="info">{{stockTotal.financeYearMoneyTotal}}</text>
-                    </view>
-                </view>
-                <view class="stock-detail-business">
-                    <view>
-                        <text class="clue">半年商票合计</text>
-                        <text class="info">{{stockTotal.businessHalfYearMoneyTotal}}</text>
-                    </view>
-                    <view>
-                        <text class="clue">一年商票合计</text>
-                        <text class="info">{{stockTotal.businessYearMoneyTotal}}</text>
-                    </view>
-                </view>
-            </block>
-
         </view>
     </view>
     <view class="stock-main">
@@ -45,7 +22,7 @@
             <view class="stock-main-info">
                 <view class="stock-info-top">
                     <view class="stock-top-id">
-                        <text>{{item.noteId}}</text>
+                        <text>{{index+1}}</text>
                     </view>
                     <view class="stock-top-detail">
                         <view>
@@ -67,23 +44,19 @@
                 <view class="stock-info-bottom">
                     <view class="stock-info-time">
                         <view>
-                            <text class="clue">出票日期:</text>
-                            <text class="info">{{item.nOpenTime}}</text>
-                        </view>
-                        <view>
                             <text class="clue">到期日期:</text>
                             <text class="info">{{item.nExpireTimeIn}}</text>
                         </view>
                     </view>
-                    <view class="stock-info-bank">
-                        <view>
-                            <text class="clue">兑票银行:</text>
-                            <text class="info">{{item.nEnterBankIn}}</text>
-                        </view>
-                        <view>
-                            <text class="clue">银行扣息:</text>
-                            <text class="info">{{item.nBuyDiscount}}</text>
-                        </view>
+                </view>
+                <view class="stock-info-bank">
+                    <view>
+                        <text class="clue">兑付银行:</text>
+                        <text class="info">{{item.nEnterBankIn}}</text>
+                    </view>
+                    <view>
+                        <text class="clue" wx:if="{{personalData.uType<3}}">银行扣息:</text>
+                        <text class="info">{{item.nBuyDiscount}}</text>
                     </view>
                 </view>
             </view>
